--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,32 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  # added list
+  # service locator
+  get_it: ^2.0.1
+
+  # bloc for state management
+  flutter_bloc: ^0.21.0
+
+  # Value equality
+  equatable: ^0.4.0
+
+  # Functional programming thingies
+  dartz: ^0.8.6
+
+  # Remote API
+  connectivity: ^0.4.3+7
+  http: ^0.12.0+2
+
+  # Local cache
+  shared_preferences: ^0.5.3+4
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  mockito: ^5.0.16
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
